force-app/main/default/objects/Marketing_Plan__c/Marketing_Plan__c.object-meta.xml
<CustomObject>
    <label>Marketing Plan</label>
    <nameField>
        <label>Marketing Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>