force-app/main/default/objects/Marketing_Plan__c/fields/Marketing_Plan_Cost__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Plan_Cost__c</fullName>
    <label>Plan Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>