force-app/main/default/objects/Marketing_Plan__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>PropStrength__Projects__c</referenceTo>
    <relationshipLabel>Marketing Plans</relationshipLabel>
    <relationshipName>Marketing_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>