force-app/main/default/objects/Marketing_Plan__c/fields/Remaining_Budget_Cost__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Budget_Cost__c</fullName>
    <formula>Marketing_Plan_Cost__c - Used_Budget_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>