force-app/main/default/objects/Marketing_Plan__c/fields/Total_Enquiry_Generated__c.field-meta.xml
<CustomField>
    <fullName>Total_Enquiry_Generated__c</fullName>
    <label>Total Enquiry Generated</label>
    <summarizedField>Marketing_Channel__c.Total_Enquiry_Count__c</summarizedField>
    <summaryForeignKey>Marketing_Channel__c.Marketing_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>