force-app/main/default/objects/Marketing_Plan__c/fields/Used_Budget_Cost__c.field-meta.xml
<CustomField>
    <fullName>Used_Budget_Cost__c</fullName>
    <label>Total Budget Utilization Till Date</label>
    <summarizedField>Marketing_Channel__c.Budget_Allotted__c</summarizedField>
    <summaryForeignKey>Marketing_Channel__c.Marketing_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>