force-app/main/default/objects/Marketing_Plan__c/validationRules/End_Date_greater_than_start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_greater_than_start_Date</fullName>
    <active>true</active>
    <description>End Date should be greater than start Date</description>
    <errorConditionFormula>End_Date__c  &lt;=  Start_Date__c</errorConditionFormula>
    <errorMessage>End Date should be greater than Start Date</errorMessage>
</ValidationRule>