force-app/main/default/objects/Marketing_Plan__c/validationRules/Plan_Budget_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Plan_Budget_Value</fullName>
    <active>true</active>
    <errorConditionFormula>Marketing_Plan_Cost__c  &lt;  Used_Budget_Cost__c</errorConditionFormula>
    <errorDisplayField>Marketing_Plan_Cost__c</errorDisplayField>
    <errorMessage>Marketing Plan Budget Cost Can Not Be Less Than Total Budget Utilization Till Date</errorMessage>
</ValidationRule>